import { newSpecPage } from '@stencil/core/testing';
import { StripeLinkAuthenticationElement } from '../stripe-link-authentication-element';
import type { IStripeService, ILinkAuthenticationElementManager } from '../../../services/interfaces';
import * as factoryModule from '../../../services/factory';

// Mock loadStripe to avoid actual network calls
jest.mock('@stripe/stripe-js', () => ({
  loadStripe: jest.fn(() =>
    Promise.resolve({
      registerAppInfo: jest.fn(),
      elements: jest.fn(() => ({})),
    }),
  ),
}));

// Mock i18n
jest.mock('../../../utils/i18n', () => ({
  i18n: {
    t: (key: string) => key,
  },
}));

/**
 * Component tests for StripeLinkAuthenticationElement
 *
 * Following Kent Beck's test pyramid philosophy:
 * - These tests verify component rendering and DOM interactions
 * - Use newSpecPage for Stencil component context
 * - For pure unit tests, see stripe-link-authentication-element.unit.spec.ts
 */
describe('stripe-link-authentication-element component tests', () => {
  // Mock service implementations
  let mockStripeService: jest.Mocked<IStripeService>;
  let mockLinkAuthenticationElementManager: jest.Mocked<ILinkAuthenticationElementManager>;

  // Set up mocks before each test
  beforeEach(() => {
    // Create fresh mock implementations
    mockStripeService = {
      state: {
        loadStripeStatus: '',
        applicationName: 'stripe-pwa-elements',
        publishableKey: undefined,
        stripeAccount: undefined,
        stripe: undefined,
        elements: undefined,
      },
      initialize: jest.fn().mockResolvedValue(undefined),
      onChange: jest.fn().mockReturnValue(jest.fn()),
      getStripe: jest.fn().mockReturnValue(undefined),
      getElements: jest.fn().mockReturnValue(undefined),
      reset: jest.fn(),
      dispose: jest.fn(),
    } as any;

    mockLinkAuthenticationElementManager = {
      getState: jest.fn().mockReturnValue({
        errorMessage: '',
        email: undefined,
      }),
      onChange: jest.fn().mockReturnValue(jest.fn()),
      initialize: jest.fn().mockResolvedValue({} as any),
      getElement: jest.fn().mockReturnValue(undefined),
      setError: jest.fn(),
      clearError: jest.fn(),
      unmount: jest.fn(),
    } as any;

    // Spy on factory methods to return our mocks
    jest.spyOn(factoryModule.serviceFactory, 'createStripeService').mockReturnValue(mockStripeService);
    jest.spyOn(factoryModule.serviceFactory, 'createLinkAuthenticationElementManager').mockReturnValue(mockLinkAuthenticationElementManager);
  });

  afterEach(() => {
    jest.restoreAllMocks();
  });

  describe('Rendering', () => {
    it('with the api key', async () => {
      const page = await newSpecPage({
        components: [StripeLinkAuthenticationElement],
        html: `<stripe-link-authentication-element publishable-key='pk_test_xxx'></stripe-link-authentication-element>`,
      });

      expect(page.root).toMatchSnapshot();
    });

    it('with default email', async () => {
      const page = await newSpecPage({
        components: [StripeLinkAuthenticationElement],
        html: `<stripe-link-authentication-element publishable-key='pk_test_xxx' default-email='test@example.com'></stripe-link-authentication-element>`,
      });

      expect(page.root).toMatchSnapshot();
    });

    it('should load stripe after setting the publishable-key', async () => {
      const page = await newSpecPage({
        components: [StripeLinkAuthenticationElement],
        html: `<stripe-link-authentication-element></stripe-link-authentication-element>`,
      });

      page.root.setAttribute('publishable-key', 'pk_test_yyyy');
      await page.waitForChanges();
      expect(page.root.querySelector('.stripe-link-authentication-wrap')).toBeTruthy();
    });
  });
});
